Fixed text align

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -55,6 +55,7 @@
 
     p {
         font-size: 2.5em;
+        text-align: justify;
     }
 
     .nav-link {
